<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_detail_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorwhite"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:background="@color/statusbar_blue">

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="14px"
            android:gravity="center">

            <ImageView
                android:layout_width="60px"
                android:layout_height="60px"

                android:src="@drawable/header_back" />
        </LinearLayout>


        <TextView
            android:id="@+id/home_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text=""
            android:textColor="@color/colorwhite"
            android:textSize="36px"

            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="8px"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="30px"
                android:src="@drawable/list_point" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="20px"
                android:text="@string/home_detail"
                android:textColor="#333333"

                android:textSize="28px" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44px"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="8px"

                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="30px"
                android:src="@drawable/list_point" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20px"
                android:text="@string/home_detail2"
                android:textColor="#333333"

                android:textSize="28px" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16px"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="58px"
                android:layout_marginTop="5px"
                android:lineSpacingExtra="10px"
                android:text="@string/home_detail22"
                android:textColor="#333333" />
        </LinearLayout>


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/test3" />

        <View
            style="@style/DividerHorizontal"

            android:layout_marginTop="30px" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45px"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="8px"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="30px"
                android:src="@drawable/list_point"

                />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"

                android:layout_marginLeft="20px"
                android:text="@string/home_detail3"
                android:textColor="#333333"
                android:textSize="28px" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:scaleType="centerCrop"
            android:src="@drawable/test1" />

        <View
            style="@style/DividerHorizontal"
            android:layout_marginBottom="50px"
            android:layout_marginTop="30px" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">


            <ImageView
                android:layout_width="8px"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="30px"
                android:src="@drawable/list_point"

                />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="20px"
                android:text="@string/home_detail3"
                android:textColor="#333333"
                android:textSize="28px" />

        </LinearLayout>


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/test3" />

        <View
            style="@style/DividerHorizontal"
            android:layout_marginBottom="10px"
            android:layout_marginTop="30px" />

        <RelativeLayout
            android:id="@+id/rl_verify"
            android:layout_width="match_parent"
            android:layout_height="106px"
            android:background="#ffffff">

            <CheckBox
                android:id="@+id/cb_check"
                style="@style/CustomCheckboxTheme"
                android:layout_width="30px"
                android:layout_height="30px"
                android:layout_alignLeft="@+id/textView3"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:focusable="false"
                android:paddingRight="20px" />


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:padding="32px"
                android:text="@string/i_is_grasp"
                android:textColor="#1b82d2"
                android:textSize="28px" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="90px"
            android:background="#f8f9fa"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true">

                <ImageView
                    android:layout_width="46px"
                    android:layout_height="46px"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/bottom_go_logo" />

                <TextView
                    android:id="@+id/tv_download"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/download_music_theory"
                    android:textColor="@color/download_home"
                    android:textSize="22px"

                    />

            </LinearLayout>


        </RelativeLayout>


    </LinearLayout>

</LinearLayout>